# uno

./: .gitignore  LICENSE  README.md  play.py  pyproject.toml
tests/: test_full_games.py  test_server.py
training/: README.md  generate_train_data.py  training_pipeline.py
training/modules/: base_trainer.py  rl.py  sft.py
uno/: __init__.py  agent.py  card.py  deck.py  player.py  unoserver.py  utils.py
uno/agents/: __init__.py  agent.py  human_agent.py  llm_agent.py
uno/resources/: instructions.txt  uno_rules.txt
